The Skyline Problem